--- a/style.css
+++ b/style.css
@@ -151,30 +151,25 @@ img {
 /* body content stylings */
 .bodyflex {
   margin-top: 2em;
-  display: flex;
-  flex-direction:column;
-  align-content: center;
-  justify-content: center;
 }
 
 .sections {
   display: flex;
-  flex-direction: row;
+  align-content: center;
+  justify-content: center;
 }
 
 .content {
   padding:3em;
   background-color: #fff;
-  margin-right: 46px;
   border-radius: 30px;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  width: 100%;
   height: 400px;
   margin-bottom: 50px;
-  border: 1px solid #e1e1e1;
+  /* border: 1px solid #e1e1e1; */
   box-shadow:3px 3px 10px 0.5px rgba(63, 61, 86, 0.175);
 }
 
@@ -214,8 +209,8 @@ img {
 .copyflex {
   margin-top: 103px;
   display: flex;
-  margin-right:10em;
-  margin-left:10em;
+  margin-right:5%;
+  margin-left:5%;
   flex-direction: row;
   align-content: center;
   justify-content: center;
@@ -275,6 +270,7 @@ img {
 
   .bodyflex {
     flex-direction: column;
+    display:flex;
     margin: 25px;
   }
   #logos {
